Regression: rendering image or animation displays grey flickering instead of rendered image #97600

Closed
opened 2022-04-25 11:09:05 +02:00 by Aleš Jelovčan · 20 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce MX330/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.91

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-25 06:37, hash: 416ef3b6b2
Worked: 3.1.2, even in 3.2 a week ago

Caused by cc6db8921b

Short description of error
See video attached
2022-04-25 11-06-08.mp4

Exact steps for others to reproduce the error
Just render an image or video, in video is even more noticeable because it does not show frames at all

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce MX330/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.91 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-25 06:37, hash: `416ef3b6b2` Worked: 3.1.2, even in 3.2 a week ago Caused by cc6db8921b **Short description of error** See video attached [2022-04-25 11-06-08.mp4](https://archive.blender.org/developer/F13024870/2022-04-25_11-06-08.mp4) **Exact steps for others to reproduce the error** Just render an image or video, in video is even more noticeable because it does not show frames at all

Added subscriber: @frogstomp-4

Added subscriber: @frogstomp-4

#97883 was marked as duplicate of this issue

#97883 was marked as duplicate of this issue

#97778 was marked as duplicate of this issue

#97778 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Thanks for the report
I can confirm. checking...

Thanks for the report I can confirm. checking...
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Behavior has changed since cc6db8921b
cc @fclem

Behavior has changed since cc6db8921b cc @fclem
Philipp Oeser changed title from Rendering image or animation displays grey flickering instead of rendered image to Regression: rendering image or animation displays grey flickering instead of rendered image 2022-04-25 15:26:57 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @Wyk

Added subscriber: @Wyk
Member

Added subscriber: @edu_sombra

Added subscriber: @edu_sombra

This issue was referenced by 014cdd3441

This issue was referenced by 014cdd3441be1adfb90ec3742bd2c12927cd20bd

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2022-05-07 18:53:40 +02:00
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

@PratikPB2123 Did you confirm that the commit resolves the issue? As I think the issue is still there.

@PratikPB2123 Did you confirm that the commit resolves the issue? As I think the issue is still there.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Eh, this still does not show the rendered image?
We either reopen this report, or accept new ones like #97988 (Regression: EEVEE: Render Animation preview shows black screen instead of rendered images)

Eh, this still does not show the rendered image? We either reopen this report, or accept new ones like #97988 (Regression: EEVEE: Render Animation preview shows black screen instead of rendered images)

On GTX10180TI the flickering is gone, instead there is now grey screen instead of rendered image.

On GTX10180TI the flickering is gone, instead there is now grey screen instead of rendered image.
Member

It's still there, yes.

It's still there, yes.

@lichtwerk the bug was concerning the flickering. The rendered image is still being rendered when using EEVEE which is blocking the 2D view refresh. Hence why it is displaying grey until the render finishes.
If the flicker is gone on all platform I would consider this fixed.

@lichtwerk the bug was concerning the flickering. The rendered image is still being rendered when using EEVEE which is blocking the 2D view refresh. Hence why it is displaying grey until the render finishes. If the flicker is gone on all platform I would consider this fixed.
Member

Ok, lets move discussion to #97988 (Regression: EEVEE: Render Animation preview shows black screen instead of rendered images) then.
I am probably not smart enough to understand the need for this [the blocking and thus loosing the ability to see rendered images], just saying that it was very useful :)

Ok, lets move discussion to #97988 (Regression: EEVEE: Render Animation preview shows black screen instead of rendered images) then. I am probably not smart enough to understand the need for this [the blocking and thus loosing the ability to see rendered images], just saying that it was very useful :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97600
No description provided.